# haskell

./: G.hs  GADT.hs  PatternFunctors.hs  TypeFamilies.hs  cabal.sandbox.config  functor.hs  mcfg.hs  types.hs
AFP-1/: README.md  smoothies.cabal  stack.yaml
AFP-1/src/: SmoothPermsSlow.hs  SmoothPermsTree.hs  SmoothPermsUnfold.hs  UnfoldUtils.hs
AFP-1/test/: SmoothPermsTest.hs
AFP-2/: asg2.cabal
AFP-2/src/: Datatypes.hs
AFP-2/test/: Test.hs
AFP-3/: asg3.cabal
AFP-3/src/: Fix.hs  Nested.hs  Teletype.hs
AFP-3/test/: Test.hs
AFP-4/: asg4.cabal  stack.yaml
AFP-4/src/: GenParser.hs  Parser.hs  ParserUtils.hs
AFP-4/test/: Test.hs
YAHT/: advanced-types.hs  common-monads.hs  graph.hs  instances-functor.hs  instances.hs  io.hs  kinds.hs  monad-plus.hs  monad-transformers.hs  monadic-combinators.hs  monads.hs  named-fields.hs  parsec.hs  parsing-monads.hs  point-free.hs  pong.hs  state-monad.hs
snippets/: Float.hs
