name: smoothies
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
homepage: https://github.com/uu-afp/uu-afp-assign1-omelkonian
author: Orestis Melkonian
extra-source-files:
    README.md

library
    exposed-modules:
        SmoothPermsSlow,
        SmoothPermsTree,
        SmoothPermsUnfold
    build-depends:
        base >=4.7 && <5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: SmoothPermsTest.hs
    build-depends:
        base >=4.7 && <5,
        smoothies,
        tasty >=0.7,
        tasty-quickcheck >=0.7,
        containers,
        multiset
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
