name: asg2
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
homepage: https://github.com/uu-afp/uu-afp-assign1-omelkonian
author: Orestis Melkonian
extra-source-files:
    README.md

library
    exposed-modules:
        Datatypes
    build-depends:
        base >=4.7 && <5,
        containers
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-orphans

test-suite test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base >=4.7 && <5,
        asg2,
        tasty >=0.7,
        tasty-smallcheck,
        smallcheck,
        derive,
        mtl,
        TypeCompose
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
