name: asg4
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
homepage: https://github.com/uu-afp/uu-afp-assign4-omelkonian
author: Orestis Melkonian
extra-source-files:
    README.md

library
    exposed-modules:
        Parser,
        ParserUtils,
        GenParser
    build-depends:
        base >=4.7 && <5,
        mtl -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base >=4.7 && <5,
        asg4 -any,
        tasty >=0.7,
        tasty-quickcheck -any,
        tasty-hunit -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
